--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.10.1",
+    "react-iframe": "^1.8.0",
     "react-markdown": "^5.0.2",
+    "react-pdf": "^5.0.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "remark-highlight.js": "^6.0.0",
     "remark-html": "^13.0.1",
+    "remark-prism": "^1.2.1",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
