--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^17.0.1",
-    "react-hook-form": "^6.10.1",
+    "react-hook-form": "^6.11.3",
     "react-iframe": "^1.8.0",
     "react-markdown": "^5.0.2",
     "react-pdf": "^5.0.0",
