--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_API_URL = https://djbportfolio.herokuapp.com
 REACT_APP_AUDIENCE = "https://portfolio-api.com"
+REACT_APP_AUTH0_DOMAIN=dev-6w9to6yp.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=0tyOZYxuKqSjrgSLPjtyB0EZVikW3qza
