--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "@types/auth0-js": "^9.14.2",
     "@types/react": "^16.9.55",
     "@types/react-syntax-highlighter": "^13.5.0",
     "axios": "^0.21.0",
