--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://djbigelow.github.io/reactportfolio",
   "name": "test-app",
   "version": "0.1.0",
   "private": true,
@@ -32,8 +31,6 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -58,7 +55,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.6",
-    "gh-pages": "^3.1.0"
+    "@types/react-router-dom": "^5.1.6"
   }
 }
